# zdppy_aiomysql

./: README.md  pyproject.toml
examples/: hello.py  school_add.py  school_find.py
zdppy_aiomysql/: __init__.py  _scm_version.py  connection.py  cursors.py  pool.py  utils.py
