[tool.poetry]
name = "zdppy_aiomysql"
version = "0.1.0"
description = ""
authors = ["张大鹏 <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
zdppy-mysql = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
